# algorithms

./: CMakeLists.txt  README.md
src/: main.cpp  stralg.cpp  stralg.h
src/numeric/: pimc.cpp  primes.cpp  primes.h  primesmain.cpp
src/string/: edist.cpp
test/: CMakeLists.txt  test.cpp
